--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
     android:layout_height="1dp"
     android:background= "#dadfe1"/>
-    <TextView android:padding="20dp"  android:layout_height="wrap_content" android:layout_width="match_parent" android:text="Read"  />
+    <TextView android:padding="20dp"  android:layout_height="wrap_content" android:layout_width="match_parent" android:text="Read" android:id="@+id/read" />
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
