--- a/app/src/main/res/layout/activity_home_employee.xml
+++ b/app/src/main/res/layout/activity_home_employee.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1.0"
-            android:text="Request a new Book" />
+            android:text="Generate bill" />
 
         <Button
             android:id="@+id/button2"
@@ -40,6 +40,12 @@
             android:layout_weight="1.0"
             android:text="View Requested books" />
 
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.0"
+            android:text="Check Customer Info" />
 
     </LinearLayout>
 </LinearLayout>
