--- a/app/src/main/res/layout/activity_view_requests.xml
+++ b/app/src/main/res/layout/activity_view_requests.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_search"
+    android:id="@+id/activity_view_requests"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.mad.crynoz.bookshop.SearchActivity">
+    tools:context="com.mad.crynoz.bookshop.ViewRequests">
+    <ListView android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/requestList" />
 
-    <ListView android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/books" />
 </RelativeLayout>
